@@ -42,6 +42,9 @@ Enhancements from 1.1
 - AgeFileFilter/SizeFileFilter
   New file filters that compares against the age and size of the file
 
+- FileSystemUtils.freeSpaceKb(drive)
+  New method that unifies result to be in kilobytes [38574]
+
 - FileUtils.contentEquals(File,File)
   Performance improved by adding length and file location checking
 
